--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.0.0
   flutter_form_builder: ^9.1.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
